<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_add_meeting"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add"
        app:showAsAction="ifRoom" />


</menu>